Add mocked biomeasurement data for prototyping.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@
 *.pyc
 
 # data files
-*.json
-*.csv
+instruments/*.json
+instruments/*.csv
+biomeasures/*_output.csv
 
 # android development
 *.iml
